# selimkit-learn

./: LICENSE  pyproject.toml
selimkit/linalg/: __init__.py  matrix.py  vector.py
tests/: test_matrix.py  test_vector.py
