[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selimkit"
version = "0.1.0"
description = "A from-scratch implementation of linear algebra and ML primitives, built while studying Mathematics for Machine Learning."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "tyudope" }
]
keywords = ["linear-algebra", "machine-learning", "education", "from-scratch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/tyudope/selimkit-learn"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["selimkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"